# bulk

./: .gitignore  .travis.yml  Block.cpp  Block.h  BlockBuilder.cpp  BlockBuilder.h  BlockWriter.cpp  BlockWriter.h  CMakeLists.txt  Command.cpp  Command.h  CommandReader.cpp  CommandReader.h  ConsoleWriter.cpp  ConsoleWriter.h  FileWriter.cpp  FileWriter.h  main.cpp
